	plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.ugent'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}



dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-config'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.security:spring-security-web'
	implementation 'com.azure.spring:azure-spring-boot-starter:3.11.0'
	implementation 'com.azure.spring:azure-spring-boot-starter-active-directory:3.11.0'
	implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.8.RELEASE'
	implementation 'com.auth0:java-jwt:3.18.2'
	implementation 'com.auth0:jwks-rsa:0.18.0'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.apache.tika:tika-core:1.27'
	implementation 'com.github.docker-java:docker-java-transport-httpclient5'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.1.2'
	implementation 'com.github.docker-java:docker-java:3.3.5'
	implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.3.5'


	implementation "org.springframework.boot:spring-boot-devtools"
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test',Test) {
	useJUnitPlatform()
      maxHeapSize = '1G'

    testLogging {
        events "passed"
    }
}
